test_suite/ui/multiple_bits_deferred.stderr
error[E0277]: the trait bound `enumflags2::_internal::AssertionFailed: enumflags2::_internal::ExactlyOneBitSet` is not satisfied
 --> $DIR/multiple_bits_deferred.rs:7:5
  |
7 |     Three = THREE,
  |     ^^^^^ the trait `enumflags2::_internal::ExactlyOneBitSet` is not implemented for `enumflags2::_internal::AssertionFailed`
